src/python/bison.output
Nonterminals useless in grammar

   elisionExprs
   propertyAssignments
   singleExpressions


Terminals unused in grammar

   ASSIGN_OP
   E_ASSIGN_OP
   CHAR_LITERAL
   EQ_OP
   COND_OP
   REL_OP
   ARITH_OP


Rules useless in grammar

  253 elisionExprs: elisionExpr ',' elisionExprs
  254             | elisionExpr

  255 propertyNameAndValueList: propertyAssignments propertyNameAndValueList

  256 propertyAssignments: propertyAssignment ',' propertyAssignments

  257 argumentList: singleExpressions argumentList

  258 singleExpressions: singleExpression ',' singleExpressions

  259 expressionSequence: singleExpressions expressionSequence


Rules useless in parser due to conflicts

   70 caseClause: Case expressionSequence ':'

   72 defaultClause: Default ':'

  115 singleExpression: New singleExpression arguments


State 26 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 58 conflicts: 19 shift/reduce
State 59 conflicts: 2 shift/reduce
State 64 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 19 shift/reduce
State 71 conflicts: 1 shift/reduce
State 109 conflicts: 3 reduce/reduce
State 122 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 132 conflicts: 19 shift/reduce
State 134 conflicts: 1 shift/reduce
State 148 conflicts: 2 shift/reduce
State 152 conflicts: 1 shift/reduce, 1 reduce/reduce
State 159 conflicts: 19 shift/reduce
State 161 conflicts: 19 shift/reduce
State 208 conflicts: 19 shift/reduce
State 209 conflicts: 19 shift/reduce
State 215 conflicts: 19 shift/reduce
State 226 conflicts: 19 shift/reduce
State 237 conflicts: 1 shift/reduce
State 241 conflicts: 3 shift/reduce
State 274 conflicts: 19 shift/reduce
State 275 conflicts: 19 shift/reduce
State 297 conflicts: 60 reduce/reduce
State 299 conflicts: 1 shift/reduce
State 330 conflicts: 4 shift/reduce
State 350 conflicts: 19 shift/reduce
State 358 conflicts: 19 shift/reduce
State 368 conflicts: 1 shift/reduce
State 417 conflicts: 2 reduce/reduce
State 435 conflicts: 3 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: sourceElements
    2        | %empty

    3 sourceElements: sourceElement
    4               | sourceElement sourceElements

    5 sourceElement: statement
    6              | functionDeclaration

    7 statement: block
    8          | variableStatement
    9          | emptyStatement
   10          | expressionStatement
   11          | ifStatement
   12          | iterationStatement
   13          | continueStatement
   14          | breakStatement
   15          | returnStatement
   16          | withStatement
   17          | labelledStatement
   18          | switchStatement
   19          | throwStatement
   20          | tryStatement
   21          | debuggerStatement

   22 block: '{' statementList '}'

   23 statementList: statement
   24              | statement statementList
   25              | %empty

   26 variableStatement: Var variableDeclarationList eos

   27 variableDeclarationList: variableDeclaration ',' variableDeclarationList
   28                        | variableDeclaration

   29 variableDeclaration: Identifier
   30                    | Identifier initialiser
   31                    | %empty

   32 initialiser: '=' singleExpression

   33 emptyStatement: ';'

   34 expressionStatement: expressionSequence

   35 ifStatement: If '(' expressionSequence ')' statement Else statement
   36            | If '(' expressionSequence ')' statement

   37 iterationStatement: Do statement While '(' expressionSequence ')' eos
   38                   | While '(' expressionSequence ')' statement
   39                   | For '(' expressionSequence ';' expressionSequence ';' expressionSequence ')' statement
   40                   | For '(' ';' expressionSequence ';' expressionSequence ')' statement
   41                   | For '(' expressionSequence ';' ';' expressionSequence ')' statement
   42                   | For '(' ';' ';' expressionSequence ')' statement
   43                   | For '(' expressionSequence ';' expressionSequence ';' ')' statement
   44                   | For '(' expressionSequence ';' ';' ')' statement
   45                   | For '(' ';' expressionSequence ';' ')' statement
   46                   | For '(' ';' ';' ')' statement
   47                   | For '(' Var variableDeclarationList ';' expressionSequence ';' expressionSequence ')' statement
   48                   | For '(' Var variableDeclarationList ';' expressionSequence ';' ')' statement
   49                   | For '(' Var variableDeclarationList ';' ';' expressionSequence ')' statement
   50                   | For '(' Var variableDeclarationList ';' ';' ')' statement
   51                   | For '(' singleExpression In expressionSequence ')' statement
   52                   | For '(' Var variableDeclaration In expressionSequence ')' statement

   53 continueStatement: Continue Identifier eos
   54                  | Continue eos

   55 breakStatement: Break Identifier eos
   56               | Break eos

   57 returnStatement: Return expressionSequence eos
   58                | Return eos

   59 withStatement: With '(' expressionSequence ')' statement

   60 switchStatement: Switch '(' expressionSequence ')' caseBlock

   61 caseBlock: '{' caseClauses defaultClause caseClauses '}'
   62          | '{' caseClauses defaultClause '}'
   63          | '{' caseClauses '}'
   64          | '{' defaultClause caseClauses '}'
   65          | '{' defaultClause '}'
   66          | '{' '}'

   67 caseClauses: caseClause
   68            | caseClause caseClauses

   69 caseClause: Case expressionSequence ':' statementList
   70           | Case expressionSequence ':'

   71 defaultClause: Default ':' statementList
   72              | Default ':'

   73 labelledStatement: Identifier ':' statement

   74 throwStatement: Throw expressionSequence eos

   75 tryStatement: Try block catchProduction
   76             | Try block finallyProduction
   77             | Try block catchProduction finallyProduction

   78 catchProduction: Catch '(' Identifier ')' block

   79 finallyProduction: Finally block

   80 debuggerStatement: Debugger eos

   81 functionDeclaration: Function Identifier '(' formalParameterList ')' '{' functionBody '}'
   82                    | Function Identifier '(' ')' '{' functionBody '}'

   83 formalParameterList: Identifier ',' formalParameterList
   84                    | Identifier

   85 functionBody: sourceElements
   86             | %empty

   87 arrayLiteral: '[' ']'
   88             | '[' elementList ']'
   89             | '[' elementList ',' elision ']'

   90 elementList: elisionExpr elementList
   91            | elisionExpr

   92 elisionExpr: elision singleExpression

   93 elision: ','
   94        | elision ','
   95        | %empty

   96 objectLiteral: '{' propertyNameAndValueList ',' '}'
   97              | '{' propertyNameAndValueList '}'
   98              | '{' ',' '}'
   99              | '{' '}'

  100 propertyNameAndValueList: propertyAssignment

  101 propertyAssignment: propertyName ':' singleExpression
  102                   | Identifier '(' ')' '{' functionBody '}'
  103                   | Identifier '(' propertySetParameterList ')' '{' functionBody '}'

  104 propertyName: identifierName
  105             | StringLiteral
  106             | numericLiteral

  107 propertySetParameterList: Identifier

  108 arguments: '(' argumentList ')'
  109          | '(' ')'

  110 argumentList: singleExpression

  111 expressionSequence: singleExpression

  112 singleExpression: singleExpression '[' expressionSequence ']'
  113                 | singleExpression '.' identifierName
  114                 | singleExpression arguments
  115                 | New singleExpression arguments
  116                 | New singleExpression
  117                 | singleExpression "++"
  118                 | singleExpression "--"
  119                 | Delete singleExpression
  120                 | Void singleExpression
  121                 | Typeof singleExpression
  122                 | "++" literal
  123                 | "--" literal
  124                 | '+' literal
  125                 | '-' literal
  126                 | '~' singleExpression
  127                 | '!' singleExpression
  128                 | literal '*' literal
  129                 | literal '/' literal
  130                 | literal '%' literal
  131                 | literal '+' literal
  132                 | literal '-' literal
  133                 | literal "<<" literal
  134                 | literal ">>" literal
  135                 | literal ">>>" literal
  136                 | literal '<' literal
  137                 | literal '>' literal
  138                 | literal "<=" literal
  139                 | literal ">=" literal
  140                 | singleExpression Instanceof singleExpression
  141                 | singleExpression In singleExpression
  142                 | literal "==" literal
  143                 | literal "!=" literal
  144                 | literal "===" literal
  145                 | literal "!==" literal
  146                 | literal '&' literal
  147                 | literal '^' literal
  148                 | literal "&&" literal
  149                 | singleExpression '?' singleExpression ':' singleExpression
  150                 | singleExpression '=' expressionSequence
  151                 | singleExpression assignmentOperator expressionSequence
  152                 | This
  153                 | Identifier
  154                 | literal
  155                 | arrayLiteral
  156                 | objectLiteral

  157 assignmentOperator: "*="
  158                   | "/="
  159                   | "%="
  160                   | "+="
  161                   | "-="
  162                   | "<<="
  163                   | ">>="
  164                   | ">>>="
  165                   | "&="
  166                   | "^="

  167 identifierName: Identifier
  168               | reservedWord

  169 keyword: Break
  170        | Do
  171        | Instanceof
  172        | Typeof
  173        | Case
  174        | Else
  175        | New
  176        | Var
  177        | Catch
  178        | Finally
  179        | Return
  180        | Void
  181        | Continue
  182        | For
  183        | Switch
  184        | While
  185        | Debugger
  186        | Function
  187        | This
  188        | With
  189        | Default
  190        | If
  191        | Throw
  192        | Delete
  193        | In
  194        | Try

  195 reservedWord: keyword
  196             | futureReservedWord
  197             | NullLiteral
  198             | BooleanLiteral

  199 literal: NullLiteral
  200        | BooleanLiteral
  201        | numericLiteral
  202        | StringLiteral

  203 numericLiteral: INT_LITERAL

  204 StringLiteral: STRING_LITERAL

  205 NullLiteral: null

  206 BooleanLiteral: true
  207               | false

  208 futureReservedWord: Class
  209                   | Enum
  210                   | Extends
  211                   | Super
  212                   | Const
  213                   | Export
  214                   | Import
  215                   | Implements
  216                   | Let
  217                   | Private
  218                   | Public
  219                   | Interface
  220                   | Package
  221                   | Protected
  222                   | Static
  223                   | Yield

  224 eos: SemiColon
  225    | %empty

  226 Break: break

  227 Do: do

  228 Instanceof: instanceof

  229 Typeof: typeof

  230 Case: case

  231 Else: else

  232 New: new

  233 Var: var

  234 Catch: catch

  235 Finally: finally

  236 Return: return

  237 Void: void

  238 Continue: continue

  239 For: for

  240 Switch: switch

  241 While: while

  242 Debugger: debugger

  243 Function: function

  244 This: this

  245 With: with

  246 Default: default

  247 If: if

  248 Throw: throw

  249 Delete: delete

  250 In: in

  251 Try: try

  252 Identifier: ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 127
'%' (37) 130
'&' (38) 146
'(' (40) 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 59 60
    78 81 82 102 103 108 109
')' (41) 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 59 60
    78 81 82 102 103 108 109
'*' (42) 128
'+' (43) 124 131
',' (44) 27 83 89 93 94 96 98
'-' (45) 125 132
'.' (46) 113
'/' (47) 129
':' (58) 69 70 71 72 73 101 149
';' (59) 33 39 40 41 42 43 44 45 46 47 48 49 50
'<' (60) 136
'=' (61) 32 150
'>' (62) 137
'?' (63) 149
'[' (91) 87 88 89 112
']' (93) 87 88 89 112
'^' (94) 147
'{' (123) 22 61 62 63 64 65 66 81 82 96 97 98 99 102 103
'}' (125) 22 61 62 63 64 65 66 81 82 96 97 98 99 102 103
'~' (126) 126
error (256)
INT_LITERAL (258) 203
STRING_LITERAL (259) 204
null (260) 205
true (261) 206
false (262) 207
Class (263) 208
Enum (264) 209
Extends (265) 210
Super (266) 211
Const (267) 212
Export (268) 213
Import (269) 214
Implements (270) 215
Let (271) 216
Private (272) 217
Public (273) 218
Interface (274) 219
Package (275) 220
Protected (276) 221
Static (277) 222
Yield (278) 223
SemiColon (279) 224
break (280) 226
do (281) 227
instanceof (282) 228
typeof (283) 229
case (284) 230
else (285) 231
new (286) 232
var (287) 233
catch (288) 234
finally (289) 235
return (290) 236
void (291) 237
continue (292) 238
for (293) 239
switch (294) 240
while (295) 241
debugger (296) 242
function (297) 243
this (298) 244
with (299) 245
default (300) 246
if (301) 247
throw (302) 248
delete (303) 249
in (304) 250
try (305) 251
ID (306) 252
ASSIGN_OP (307)
E_ASSIGN_OP (308)
CHAR_LITERAL (309)
EQ_OP (310)
COND_OP (311)
REL_OP (312)
ARITH_OP (313)
"++" (314) 117 122
"--" (315) 118 123
"<<" (316) 133
">>" (317) 134
">>>" (318) 135
"<=" (319) 138
">=" (320) 139
"==" (321) 142
"!=" (322) 143
"===" (323) 144
"!==" (324) 145
"&&" (325) 148
"*=" (326) 157
"/=" (327) 158
"%=" (328) 159
"+=" (329) 160
"-=" (330) 161
"<<=" (331) 162
">>=" (332) 163
">>>=" (333) 164
"&=" (334) 165
"^=" (335) 166


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
program (105)
    on left: 1 2, on right: 0
sourceElements (106)
    on left: 3 4, on right: 1 4 85
sourceElement (107)
    on left: 5 6, on right: 3 4
statement (108)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, on right: 5
    23 24 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 59
    73
block (109)
    on left: 22, on right: 7 75 76 77 78 79
statementList (110)
    on left: 23 24 25, on right: 22 24 69 71
variableStatement (111)
    on left: 26, on right: 8
variableDeclarationList (112)
    on left: 27 28, on right: 26 27 47 48 49 50
variableDeclaration (113)
    on left: 29 30 31, on right: 27 28 52
initialiser (114)
    on left: 32, on right: 30
emptyStatement (115)
    on left: 33, on right: 9
expressionStatement (116)
    on left: 34, on right: 10
ifStatement (117)
    on left: 35 36, on right: 11
iterationStatement (118)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52, on right:
    12
continueStatement (119)
    on left: 53 54, on right: 13
breakStatement (120)
    on left: 55 56, on right: 14
returnStatement (121)
    on left: 57 58, on right: 15
withStatement (122)
    on left: 59, on right: 16
switchStatement (123)
    on left: 60, on right: 18
caseBlock (124)
    on left: 61 62 63 64 65 66, on right: 60
caseClauses (125)
    on left: 67 68, on right: 61 62 63 64 68
caseClause (126)
    on left: 69 70, on right: 67 68
defaultClause (127)
    on left: 71 72, on right: 61 62 64 65
labelledStatement (128)
    on left: 73, on right: 17
throwStatement (129)
    on left: 74, on right: 19
tryStatement (130)
    on left: 75 76 77, on right: 20
catchProduction (131)
    on left: 78, on right: 75 77
finallyProduction (132)
    on left: 79, on right: 76 77
debuggerStatement (133)
    on left: 80, on right: 21
functionDeclaration (134)
    on left: 81 82, on right: 6
formalParameterList (135)
    on left: 83 84, on right: 81 83
functionBody (136)
    on left: 85 86, on right: 81 82 102 103
arrayLiteral (137)
    on left: 87 88 89, on right: 155
elementList (138)
    on left: 90 91, on right: 88 89 90
elisionExpr (139)
    on left: 92, on right: 90 91
elision (140)
    on left: 93 94 95, on right: 89 92 94
objectLiteral (141)
    on left: 96 97 98 99, on right: 156
propertyNameAndValueList (142)
    on left: 100, on right: 96 97
propertyAssignment (143)
    on left: 101 102 103, on right: 100
propertyName (144)
    on left: 104 105 106, on right: 101
propertySetParameterList (145)
    on left: 107, on right: 103
arguments (146)
    on left: 108 109, on right: 114 115
argumentList (147)
    on left: 110, on right: 108
expressionSequence (148)
    on left: 111, on right: 34 35 36 37 38 39 40 41 42 43 44 45 47
    48 49 51 52 57 59 60 69 70 74 112 150 151
singleExpression (149)
    on left: 112 113 114 115 116 117 118 119 120 121 122 123 124 125
    126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141
    142 143 144 145 146 147 148 149 150 151 152 153 154 155 156, on right:
    32 51 92 101 110 111 112 113 114 115 116 117 118 119 120 121 126
    127 140 141 149 150 151
assignmentOperator (150)
    on left: 157 158 159 160 161 162 163 164 165 166, on right: 151
identifierName (151)
    on left: 167 168, on right: 104 113
keyword (152)
    on left: 169 170 171 172 173 174 175 176 177 178 179 180 181 182
    183 184 185 186 187 188 189 190 191 192 193 194, on right: 195
reservedWord (153)
    on left: 195 196 197 198, on right: 168
literal (154)
    on left: 199 200 201 202, on right: 122 123 124 125 128 129 130
    131 132 133 134 135 136 137 138 139 142 143 144 145 146 147 148
    154
numericLiteral (155)
    on left: 203, on right: 106 201
StringLiteral (156)
    on left: 204, on right: 105 202
NullLiteral (157)
    on left: 205, on right: 197 199
BooleanLiteral (158)
    on left: 206 207, on right: 198 200
futureReservedWord (159)
    on left: 208 209 210 211 212 213 214 215 216 217 218 219 220 221
    222 223, on right: 196
eos (160)
    on left: 224 225, on right: 26 37 53 54 55 56 57 58 74 80
Break (161)
    on left: 226, on right: 55 56 169
Do (162)
    on left: 227, on right: 37 170
Instanceof (163)
    on left: 228, on right: 140 171
Typeof (164)
    on left: 229, on right: 121 172
Case (165)
    on left: 230, on right: 69 70 173
Else (166)
    on left: 231, on right: 35 174
New (167)
    on left: 232, on right: 115 116 175
Var (168)
    on left: 233, on right: 26 47 48 49 50 52 176
Catch (169)
    on left: 234, on right: 78 177
Finally (170)
    on left: 235, on right: 79 178
Return (171)
    on left: 236, on right: 57 58 179
Void (172)
    on left: 237, on right: 120 180
Continue (173)
    on left: 238, on right: 53 54 181
For (174)
    on left: 239, on right: 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 182
Switch (175)
    on left: 240, on right: 60 183
While (176)
    on left: 241, on right: 37 38 184
Debugger (177)
    on left: 242, on right: 80 185
Function (178)
    on left: 243, on right: 81 82 186
This (179)
    on left: 244, on right: 152 187
With (180)
    on left: 245, on right: 59 188
Default (181)
    on left: 246, on right: 71 72 189
If (182)
    on left: 247, on right: 35 36 190
Throw (183)
    on left: 248, on right: 74 191
Delete (184)
    on left: 249, on right: 119 192
In (185)
    on left: 250, on right: 51 52 141 193
Try (186)
    on left: 251, on right: 75 76 77 194
Identifier (187)
    on left: 252, on right: 29 30 53 55 73 78 81 82 83 84 102 103 107
    153 167


State 0

    0 $accept: . program $end

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5
    break           shift, and go to state 6
    do              shift, and go to state 7
    typeof          shift, and go to state 8
    new             shift, and go to state 9
    var             shift, and go to state 10
    return          shift, and go to state 11
    void            shift, and go to state 12
    continue        shift, and go to state 13
    for             shift, and go to state 14
    switch          shift, and go to state 15
    while           shift, and go to state 16
    debugger        shift, and go to state 17
    function        shift, and go to state 18
    this            shift, and go to state 19
    with            shift, and go to state 20
    if              shift, and go to state 21
    throw           shift, and go to state 22
    delete          shift, and go to state 23
    try             shift, and go to state 24
    ID              shift, and go to state 25
    '{'             shift, and go to state 26
    ';'             shift, and go to state 27
    '['             shift, and go to state 28
    "++"            shift, and go to state 29
    "--"            shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    $default  reduce using rule 2 (program)

    program              go to state 35
    sourceElements       go to state 36
    sourceElement        go to state 37
    statement            go to state 38
    block                go to state 39
    variableStatement    go to state 40
    emptyStatement       go to state 41
    expressionStatement  go to state 42
    ifStatement          go to state 43
    iterationStatement   go to state 44
    continueStatement    go to state 45
    breakStatement       go to state 46
    returnStatement      go to state 47
    withStatement        go to state 48
    switchStatement      go to state 49
    labelledStatement    go to state 50
    throwStatement       go to state 51
    tryStatement         go to state 52
    debuggerStatement    go to state 53
    functionDeclaration  go to state 54
    arrayLiteral         go to state 55
    objectLiteral        go to state 56
    expressionSequence   go to state 57
    singleExpression     go to state 58
    literal              go to state 59
    numericLiteral       go to state 60
    StringLiteral        go to state 61
    NullLiteral          go to state 62
    BooleanLiteral       go to state 63
    Break                go to state 64
    Do                   go to state 65
    Typeof               go to state 66
    New                  go to state 67
    Var                  go to state 68
    Return               go to state 69
    Void                 go to state 70
    Continue             go to state 71
    For                  go to state 72
    Switch               go to state 73
    While                go to state 74
    Debugger             go to state 75
    Function             go to state 76
    This                 go to state 77
    With                 go to state 78
    If                   go to state 79
    Throw                go to state 80
    Delete               go to state 81
    Try                  go to state 82
    Identifier           go to state 83


State 1

  203 numericLiteral: INT_LITERAL .

    $default  reduce using rule 203 (numericLiteral)


State 2

  204 StringLiteral: STRING_LITERAL .

    $default  reduce using rule 204 (StringLiteral)


State 3

  205 NullLiteral: null .

    $default  reduce using rule 205 (NullLiteral)


State 4

  206 BooleanLiteral: true .

    $default  reduce using rule 206 (BooleanLiteral)


State 5

  207 BooleanLiteral: false .

    $default  reduce using rule 207 (BooleanLiteral)


State 6

  226 Break: break .

    $default  reduce using rule 226 (Break)


State 7

  227 Do: do .

    $default  reduce using rule 227 (Do)


State 8

  229 Typeof: typeof .

    $default  reduce using rule 229 (Typeof)


State 9

  232 New: new .

    $default  reduce using rule 232 (New)


State 10

  233 Var: var .

    $default  reduce using rule 233 (Var)


State 11

  236 Return: return .

    $default  reduce using rule 236 (Return)


State 12

  237 Void: void .

    $default  reduce using rule 237 (Void)


State 13

  238 Continue: continue .

    $default  reduce using rule 238 (Continue)


State 14

  239 For: for .

    $default  reduce using rule 239 (For)


State 15

  240 Switch: switch .

    $default  reduce using rule 240 (Switch)


State 16

  241 While: while .

    $default  reduce using rule 241 (While)


State 17

  242 Debugger: debugger .

    $default  reduce using rule 242 (Debugger)


State 18

  243 Function: function .

    $default  reduce using rule 243 (Function)


State 19

  244 This: this .

    $default  reduce using rule 244 (This)


State 20

  245 With: with .

    $default  reduce using rule 245 (With)


State 21

  247 If: if .

    $default  reduce using rule 247 (If)


State 22

  248 Throw: throw .

    $default  reduce using rule 248 (Throw)


State 23

  249 Delete: delete .

    $default  reduce using rule 249 (Delete)


State 24

  251 Try: try .

    $default  reduce using rule 251 (Try)


State 25

  252 Identifier: ID .

    $default  reduce using rule 252 (Identifier)


State 26

   22 block: '{' . statementList '}'
   96 objectLiteral: '{' . propertyNameAndValueList ',' '}'
   97              | '{' . propertyNameAndValueList '}'
   98              | '{' . ',' '}'
   99              | '{' . '}'

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5
    Class           shift, and go to state 84
    Enum            shift, and go to state 85
    Extends         shift, and go to state 86
    Super           shift, and go to state 87
    Const           shift, and go to state 88
    Export          shift, and go to state 89
    Import          shift, and go to state 90
    Implements      shift, and go to state 91
    Let             shift, and go to state 92
    Private         shift, and go to state 93
    Public          shift, and go to state 94
    Interface       shift, and go to state 95
    Package         shift, and go to state 96
    Protected       shift, and go to state 97
    Static          shift, and go to state 98
    Yield           shift, and go to state 99
    break           shift, and go to state 6
    do              shift, and go to state 7
    instanceof      shift, and go to state 100
    typeof          shift, and go to state 8
    case            shift, and go to state 101
    else            shift, and go to state 102
    new             shift, and go to state 9
    var             shift, and go to state 10
    catch           shift, and go to state 103
    finally         shift, and go to state 104
    return          shift, and go to state 11
    void            shift, and go to state 12
    continue        shift, and go to state 13
    for             shift, and go to state 14
    switch          shift, and go to state 15
    while           shift, and go to state 16
    debugger        shift, and go to state 17
    function        shift, and go to state 18
    this            shift, and go to state 19
    with            shift, and go to state 20
    default         shift, and go to state 105
    if              shift, and go to state 21
    throw           shift, and go to state 22
    delete          shift, and go to state 23
    in              shift, and go to state 106
    try             shift, and go to state 24
    ID              shift, and go to state 25
    '{'             shift, and go to state 26
    '}'             shift, and go to state 107
    ','             shift, and go to state 108
    ';'             shift, and go to state 27
    '['             shift, and go to state 28
    "++"            shift, and go to state 29
    "--"            shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    '}'  [reduce using rule 25 (statementList)]

    statement                 go to state 109
    block                     go to state 39
    statementList             go to state 110
    variableStatement         go to state 40
    emptyStatement            go to state 41
    expressionStatement       go to state 42
    ifStatement               go to state 43
    iterationStatement        go to state 44
    continueStatement         go to state 45
    breakStatement            go to state 46
    returnStatement           go to state 47
    withStatement             go to state 48
    switchStatement           go to state 49
    labelledStatement         go to state 50
    throwStatement            go to state 51
    tryStatement              go to state 52
    debuggerStatement         go to state 53
    arrayLiteral              go to state 55
    objectLiteral             go to state 56
    propertyNameAndValueList  go to state 111
    propertyAssignment        go to state 112
    propertyName              go to state 113
    expressionSequence        go to state 57
    singleExpression          go to state 58
    identifierName            go to state 114
    keyword                   go to state 115
    reservedWord              go to state 116
    literal                   go to state 59
    numericLiteral            go to state 117
    StringLiteral             go to state 118
    NullLiteral               go to state 119
    BooleanLiteral            go to state 120
    futureReservedWord        go to state 121
    Break                     go to state 122
    Do                        go to state 123
    Instanceof                go to state 124
    Typeof                    go to state 125
    Case                      go to state 126
    Else                      go to state 127
    New                       go to state 128
    Var                       go to state 129
    Catch                     go to state 130
    Finally                   go to state 131
    Return                    go to state 132
    Void                      go to state 133
    Continue                  go to state 134
    For                       go to state 135
    Switch                    go to state 136
    While                     go to state 137
    Debugger                  go to state 138
    Function                  go to state 139
    This                      go to state 140
    With                      go to state 141
    Default                   go to state 142
    If                        go to state 143
    Throw                     go to state 144
    Delete                    go to state 145
    In                        go to state 146
    Try                       go to state 147
    Identifier                go to state 148


State 27

   33 emptyStatement: ';' .

    $default  reduce using rule 33 (emptyStatement)


State 28

   87 arrayLiteral: '[' . ']'
   88             | '[' . elementList ']'
   89             | '[' . elementList ',' elision ']'

    ','  shift, and go to state 149
    ']'  shift, and go to state 150

    ','       [reduce using rule 95 (elision)]
    $default  reduce using rule 95 (elision)

    elementList  go to state 151
    elisionExpr  go to state 152
    elision      go to state 153


State 29

  122 singleExpression: "++" . literal

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5

    literal         go to state 154
    numericLiteral  go to state 60
    StringLiteral   go to state 61
    NullLiteral     go to state 62
    BooleanLiteral  go to state 63


State 30

  123 singleExpression: "--" . literal

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5

    literal         go to state 155
    numericLiteral  go to state 60
    StringLiteral   go to state 61
    NullLiteral     go to state 62
    BooleanLiteral  go to state 63


State 31

  124 singleExpression: '+' . literal

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5

    literal         go to state 156
    numericLiteral  go to state 60
    StringLiteral   go to state 61
    NullLiteral     go to state 62
    BooleanLiteral  go to state 63


State 32

  125 singleExpression: '-' . literal

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5

    literal         go to state 157
    numericLiteral  go to state 60
    StringLiteral   go to state 61
    NullLiteral     go to state 62
    BooleanLiteral  go to state 63


State 33

  126 singleExpression: '~' . singleExpression

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5
    typeof          shift, and go to state 8
    new             shift, and go to state 9
    void            shift, and go to state 12
    this            shift, and go to state 19
    delete          shift, and go to state 23
    ID              shift, and go to state 25
    '{'             shift, and go to state 158
    '['             shift, and go to state 28
    "++"            shift, and go to state 29
    "--"            shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    arrayLiteral      go to state 55
    objectLiteral     go to state 56
    singleExpression  go to state 159
    literal           go to state 59
    numericLiteral    go to state 60
    StringLiteral     go to state 61
    NullLiteral       go to state 62
    BooleanLiteral    go to state 63
    Typeof            go to state 66
    New               go to state 67
    Void              go to state 70
    This              go to state 77
    Delete            go to state 81
    Identifier        go to state 160


State 34

  127 singleExpression: '!' . singleExpression

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5
    typeof          shift, and go to state 8
    new             shift, and go to state 9
    void            shift, and go to state 12
    this            shift, and go to state 19
    delete          shift, and go to state 23
    ID              shift, and go to state 25
    '{'             shift, and go to state 158
    '['             shift, and go to state 28
    "++"            shift, and go to state 29
    "--"            shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    arrayLiteral      go to state 55
    objectLiteral     go to state 56
    singleExpression  go to state 161
    literal           go to state 59
    numericLiteral    go to state 60
    StringLiteral     go to state 61
    NullLiteral       go to state 62
    BooleanLiteral    go to state 63
    Typeof            go to state 66
    New               go to state 67
    Void              go to state 70
    This              go to state 77
    Delete            go to state 81
    Identifier        go to state 160


State 35

    0 $accept: program . $end

    $end  shift, and go to state 162


State 36

    1 program: sourceElements .

    $default  reduce using rule 1 (program)


State 37

    3 sourceElements: sourceElement .
    4               | sourceElement . sourceElements

    INT_LITERAL     shift, and go to state 1
    STRING_LITERAL  shift, and go to state 2
    null            shift, and go to state 3
    true            shift, and go to state 4
    false           shift, and go to state 5
    break           shift, and go to state 6
    do              shift, and go to state 7
    typeof          shift, and go to state 8
    new             shift, and go to state 9
    var             shift, and go to state 10
    return          shift, and go to state 11
    void            shift, and go to state 12
    continue        shift, and go to state 13
    for             shift, and go to state 14
    switch          shift, and go to state 15
    while           shift, and go to state 16
    debugger        shift, and go to state 17
    function        shift, and go to state 18
    this            shift, and go to state 19
    with            shift, and go to state 20
    if              shift, and go to state 21
    throw           shift, and go to state 22
    delete          shift, and go to state 23
    try             shift, and go to state 24
    ID              shift, and go to state 25
    '{'             shift, and go to state 26
    ';'             shift, and go to state 27
    '['             shift, and go to state 28
    "++"            shift, and go to state 29
    "--"            shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    $default  reduce using rule 3 (sourceElements)
